# template-cpp

./: CMakeLists.txt
scripts/: runtests.sh
src/: main.cpp
tests/: tests.cpp
